correçoes de roteamento

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "npx serve -s dist -l 5173"
+    "start": "npx serve -s dist -p 5173"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
